--- a/Seoul_Bike_Regression.ipynb
+++ b/Seoul_Bike_Regression.ipynb
@@ -25,12 +25,7 @@
         "- Muhammad Fakhri Arrasyid - 101032300150\n",
         "- Yoga Reswara - 101032300119\n",
         "\n",
-        "Dataset: [Seoul Bike Sharing Demand](https://archive.ics.uci.edu/dataset/560/seoul+bike+sharing+demand)\n",
-        "\n",
-        "Sistem bike sharing menjadi solusi transportasi urban yang semakin populer.\n",
-        "Kemampuan memprediksi demand secara akurat membantu operator mengoptimalkan\n",
-        "distribusi sepeda dan mengurangi shortage. Proyek ini membangun model prediksi\n",
-        "menggunakan data cuaca dan waktu dari sistem bike sharing."
+        "Dataset: [Seoul Bike Sharing Demand (UCI ML Repository)](https://archive.ics.uci.edu/dataset/560/seoul+bike+sharing+demand)"
       ]
     },
     {
@@ -1576,7 +1571,10 @@
       },
       "source": [
         "---\n",
-        "## **4. Analisis Data Eksploratif (EDA)**"
+        "## **4. Analisis Data Eksploratif (EDA)**\n",
+        "\n",
+        "Sebelum melakukan pemodelan, perlu dilakukan eksplorasi data untuk memahami karakteristik dan pola yang terkandung di dalamnya. Analisis data eksploratif bertujuan untuk mengidentifikasi distribusi variabel target, mendeteksi keberadaan outlier, menganalisis korelasi antar variabel, serta menemukan insight yang dapat mengarahkan proses feature engineering dan pemilihan model.\n",
+        "Tahapan EDA dalam proyek ini meliputi: (1) analisis distribusi variabel target (Rented Bike Count), (2) deteksi dan penanganan outlier, (3) analisis korelasi antar fitur numerik, dan (4) eksplorasi pola penyewaan berdasarkan variabel temporal dan kategorikal.\n"
       ]
     },
     {
@@ -1616,7 +1614,38 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.1. Outliers pada Rented Bike Count"
+        "## 4.1. Deteksi Outlier\n",
+        "\n",
+        "Deteksi outlier dilakukan menggunakan metode Interquartile Range (IQR). Metode ini mengidentifikasi nilai-nilai ekstrem berdasarkan sebaran data pada kuartil. Faktor pengali 1.5 merupakan konvensi standar yang diperkenalkan oleh John Tukey (1977) dalam metode boxplot.\n",
+        "\n",
+        "### Formulasi Matematis\n",
+        "\n",
+        "Diberikan dataset $X = \\{x_1, x_2, ..., x_n\\}$, maka:\n",
+        "\n",
+        "**Kuartil Pertama (Q1):**\n",
+        "$$Q_1 = P_{25}(X)$$\n",
+        "\n",
+        "**Kuartil Ketiga (Q3):**\n",
+        "$$Q_3 = P_{75}(X)$$\n",
+        "\n",
+        "**Interquartile Range:**\n",
+        "$$IQR = Q_3 - Q_1$$\n",
+        "\n",
+        "**Batas Bawah (Lower Bound):**\n",
+        "$$L_b = Q_1 - 1.5 \\times IQR$$\n",
+        "\n",
+        "**Batas Atas (Upper Bound):**\n",
+        "$$U_b = Q_3 + 1.5 \\times IQR$$\n",
+        "\n",
+        "**Kriteria Outlier:**\n",
+        "\n",
+        "Suatu observasi $x_i$ dikategorikan sebagai outlier jika dan hanya jika:\n",
+        "\n",
+        "$$x_i < L_b \\quad \\lor \\quad x_i > U_b$$\n",
+        "\n",
+        "atau dalam notasi himpunan:\n",
+        "\n",
+        "$$\\text{Outliers} = \\{x_i \\in X \\mid x_i < (Q_1 - 1.5 \\cdot IQR) \\lor x_i > (Q_3 + 1.5 \\cdot IQR)\\}$$\n"
       ],
       "metadata": {
         "id": "agrV_7J0onqM"
@@ -1678,9 +1707,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Menggunakan metode IQR, batas atas outlier ditemukan pada nilai ~2376. Data di atas batas ini secara statistik dapat dikategorikan sebagai outlier dengan jumlah 158 data (1.80% dari total).\n",
+        "Berdasarkan perhitungan di atas, batas atas outlier ditemukan pada nilai 2376.625. Data dengan jumlah penyewaan di atas batas tersebut secara statistik dikategorikan sebagai outlier, dengan total 158 observasi atau 1.80% dari keseluruhan data.\n",
         "\n",
-        "Meskipun demikian, outlier pada `Rented Bike Count` tidak akan dihapus. Nilai-nilai ekstrem ini bukan merupakan noise atau error pengukuran, melainkan representasi demand aktual yang terjadi pada kondisi tertentu seperti jam sibuk (rush hour), cuaca optimal, dan hari operasional. Kemampuan model untuk memprediksi peak demand justru berguna bagi operator dalam merencanakan distribusi sepeda."
+        "Outlier pada variabel Rented Bike Count tidak akan dihapus dari dataset. Keputusan ini didasarkan pada pertimbangan bahwa nilai-nilai ekstrem tersebut bukan merupakan noise atau error pengukuran, melainkan representasi demand aktual yang terjadi pada kondisi tertentu seperti jam sibuk, cuaca optimal, dan hari operasional. Kemampuan model untuk memprediksi peak demand justru menjadi informasi yang berguna bagi operator dalam merencanakan distribusi dan alokasi sepeda."
       ],
       "metadata": {
         "id": "rOAVcc7Nz5qD"
@@ -1689,7 +1718,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.2. Korelasi Semua Fitur"
+        "### 4.2. Korelasi Semua Fitur\n",
+        "\n",
+        "Analisis korelasi dilakukan untuk mengidentifikasi hubungan linear antar variabel numerik. Matriks korelasi divisualisasikan menggunakan heatmap untuk memudahkan identifikasi pasangan variabel dengan korelasi tinggi yang berpotensi menyebabkan multikolinearitas."
       ],
       "metadata": {
         "id": "MkVIWbaYoUul"
@@ -1744,7 +1775,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### 4.3. Korelasi Fitur dengan Target"
+        "### 4.3. Korelasi Fitur dengan Target\n",
+        "\n",
+        "Untuk menentukan fitur mana yang paling relevan sebagai prediktor, dilakukan analisis korelasi antara setiap fitur dengan variabel target (Rented Bike Count). Fitur dengan korelasi tinggi terhadap target berpotensi menjadi prediktor yang kuat dalam model regresi."
       ],
       "metadata": {
         "id": "M4SLCNQjndLw"
